still fixing images

--- a/src/content/blog/hugo-shortcode/index.mdx
+++ b/src/content/blog/hugo-shortcode/index.mdx
@@ -45,17 +45,17 @@ import Picture from '../../../components/Picture.astro';
 ```html
 <!-- แบบธรรมดา -->
 <p class="media">
-  <img src="" alt="">
+  <img src="source" alt="alt">
 </p>
 
 <!-- แบบกึ่งเต็ม -->
 <p class="media semi-full">
-  <img src="" alt="">
+  <img src="source" alt="alt">
 </p>
 
 <!-- แบบเต็ม -->
 <p class="media full">
-  <img src="" alt="">
+  <img src="source" alt="alt">
 </p>
 ```
 
@@ -100,7 +100,7 @@ _(ในโพสต์[รีวิวจักรยาน Storck Visioner](ht
 ```html
 <!-- picture.html -->
 <p class="media">
-  <img src="" alt="">
+  <img src="source" alt="alt">
 </p>
 ```
 
@@ -119,4 +119,4 @@ _(ในโพสต์[รีวิวจักรยาน Storck Visioner](ht
 
 ทดสอบเพิ่มรูปโดยใช้ `pitcure` shortcode
 
-<Picture  src="/images/hugo-shortcode/platoo.jpg" alt="ทดสอบ picture shortcode ด้วยรูปปลาทู" />
+<Picture  src="/images/hugo-shortcode/platoo.jpg" alt="ทดสอบ picture shortcode ด้วยรูปปลาทู" width="1000" height="1000" />
