--- a/src/content/blog/inline-css/index.mdx
+++ b/src/content/blog/inline-css/index.mdx
@@ -54,7 +54,7 @@ import WarningMessage from '@components/WarningMessage.astro';
 
 เทคนิคทั้งหมดตอนต้น ก็เพื่อพยายามทำให้ไฟล์ CSS ที่มีขนาด 4.6KB _โหลดไวขึ้นอีก!_ ซึ่งผมก็กลับมาตั้งคำถามว่า **มันจำเป็นไหม** กับไฟล์จิ๋วแค่นี้
 
-<Picture src="/images/blog-inline-css/lazy.css.png" alt="lazy.css" />
+<Picture src="/images/blog-inline-css/lazy.css.png" alt="lazy.css" width="600" height="377" />
 
 เมื่อก่อนมันเวิร์กเพราะไฟล์ CSS มันเคยใหญ่กว่านี้ แต่ตอนนี้ไม่แล้ว
 
@@ -100,11 +100,11 @@ import WarningMessage from '@components/WarningMessage.astro';
 
 ก่อน:
 
-<Picture src="/images/blog-inline-css/wpt-before.png" alt="webpagetest.org result: before"/>
+<Picture src="/images/blog-inline-css/wpt-before.png" alt="webpagetest.org result: before" width="780" height="600"/>
 
 หลัง:
 
-<Picture src="/images/blog-inline-css/wpt-after.png" alt="webpagetest.org result: after"/>
+<Picture src="/images/blog-inline-css/wpt-after.png" alt="webpagetest.org result: after" width="780" height="605"/>
 
 แน่นอนว่าการันตีผลอะไรไม่ได้จากการเทสต์แค่ครั้งสองครั้ง
 แต่ก็อาจจะพอเห็นภาพได้บ้าง
