--- a/src/content/blog/orion-constellation/index.mdx
+++ b/src/content/blog/orion-constellation/index.mdx
@@ -21,9 +21,11 @@ import Picture from '../../../components/Picture.astro';
 **กลุ่มดาวนายพราน** หรือ **Orion** ประกอบด้วยดาวฤกษ์ (ที่มี[ความสว่างปรากฏ](http://th.wikipedia.org/wiki/%E0%B8%84%E0%B8%A7%E0%B8%B2%E0%B8%A1%E0%B8%AA%E0%B8%A7%E0%B9%88%E0%B8%B2%E0%B8%87%E0%B8%9B%E0%B8%A3%E0%B8%B2%E0%B8%81%E0%B8%8F)น้อยกว่า 3) จำนวนทั้งหมด 8 ดวงครับ ในจำนวนนี้มี 2 ดวงที่เป็นดาวฤกษ์สว่างมาก ก็คือดาว **บีเทลจุส (Betelgeuse)** ตรงไล่ขวา เป็นดาวยักษ์แดง สีออกแดงๆส้มๆ อยู่ห่างออกไปประมาณ 420 ปีแสง  ส่วนอีกดวงก็คือดาว **ไรเจล (Rigel)** ตรงเข่าซ้าย(หรือเท้าซ้าย) อยู่ห่างออกไปประมาณ 770 ปีแสงครับ
 
 <Picture
-  src="images/orion.jpg"
+  src="/images/orion.jpg"
   alt="กลุ่มดาวนายพราน"
   ratio="4-3"
+  width="400"
+  height="300"
   caption="กลุ่มดาวนายพราน (ขวาบนของภาพ) ที่ผมถ่ายไว้เมื่อปี 2007 ด้วยกล้องคอมแพ็ค Sony DSC W-5"
 />
 
