--- a/src/content/blog/vscode-indent-settings/index.mdx
+++ b/src/content/blog/vscode-indent-settings/index.mdx
@@ -18,6 +18,7 @@ import Picture from '../../../components/Picture.astro';
 <Picture
   src="/images/vscode-indent-settings/default.png"
   width="354"
+  height="747"
   alt="default tree view ของ vscode"
   caption="Default Tree View ของ VSCode"
 />
@@ -32,6 +33,7 @@ import Picture from '../../../components/Picture.astro';
 <Picture
   src="/images/vscode-indent-settings/tree-indent.png"
   width="403"
+  height="248"
   alt="เปิด settings หาคำว่า tree indent"
   caption="เปิด Settings ของ VSCode แล้วหาคำว่า tree indent"
 />
@@ -40,6 +42,7 @@ import Picture from '../../../components/Picture.astro';
 
 <Picture
   width="355"
+  height="748"
   src="/images/vscode-indent-settings/indent-adjusted.png"
   alt="หลังจากปรับ indent เป็น 20 แล้ว ดูง่ายสบายตา"
   caption="Tree View หลังจากปรับ indent เป็น 20 แล้ว ดูง่ายสบายตา"
@@ -50,6 +53,7 @@ import Picture from '../../../components/Picture.astro';
 
 <Picture
   width="825"
+  height="672"
   src="/images/vscode-indent-settings/indent-guide-on.png"
   alt="indent 20 พร้อมกับเปิด indent guide"
   caption="Indent 20 พร้อมกับเปิด indent guide"
@@ -63,6 +67,7 @@ import Picture from '../../../components/Picture.astro';
 
 <Picture
   width="350"
+  height="468"
   src="/images/vscode-indent-settings/zero-indent.png"
   alt="ปรับ indent เป็น 0"
   caption="ปรับ indent เป็น 0 เพื่อแกล้งเพื่อน"
