--- a/src/content/blog/corne-keyboard/index.mdx
+++ b/src/content/blog/corne-keyboard/index.mdx
@@ -51,7 +51,6 @@ Mainly because I'm curious, and partly because there are no stabilizers involved
   <Image
     src="https://i.ytimg.com/vi/wTMcH7u-vu0/maxresdefault.jpg"
     alt="Corne wireless keyboard by Josean Martinez"
-
     width={1200} height={675}
   />
   <figcaption class="px-4">
@@ -76,20 +75,20 @@ While waiting for the parts to deliver, I check out different case designs and c
     <Image
       src={import('./images/parts-box.jpg')}
       alt="Corne keyboard parts delivered in a small box"
-
-      width={800}
+      width="800"
+      height="1200"
     />
     <Image
       src={import('./images/corne-pcb.jpg')}
       alt="Corne PCBs"
-
-      width={800}
+      height="1200"
+      width="800"
     />
     <Image
       src={import('./images/case-v1.jpg')}
       alt="The 3D printed case for the Corne keyboard. Designed by VOID"
-
-      width={800}
+      height="1200"
+      width="800"
     />
   </div>
 </div>
@@ -118,9 +117,8 @@ I start with soldering **SMD** (Surface Mounting Device) diodes (_SOD-123_), whi
       <Image
         src={import('./images/soldered-diodes.jpg')}
         alt="Soldered diodes. Many bad soldering there."
-
-
-        width={800}
+        width="800"
+        height="1200"
       />
       <figcaption class="px-4 mt-0">There are imperfect soldering marks everywhere.</figcaption>
     </figure>
@@ -137,8 +135,7 @@ And Soldering Paste is a game changer for me.
   class="mx-auto"
   src={import('./images/relife-soldering-paste.jpg')}
   alt="Relife soldering paste 183c"
-
-
+  height={400}
   width={400}
 />
 
@@ -153,16 +150,14 @@ After that, it is soldering the LEDs. There are 12 underglow LEDs (_WS2812B_) an
     <Image
       src={import('./images/soldered-gateron-hotswap-sockets.jpg')}
       alt="Gateron Hotswap sockets are soldered in place"
-
-
-      width={800}
+      height="788"
+      width="1400"
     />
     <Image
       src={import('./images/soldered-leds.jpg')}
       alt="all LEDs are soldered to the PCB"
-
-
-      width={800}
+      height="788"
+      width="1400"
     />
   </div>
 </div>
@@ -184,16 +179,14 @@ I learn later on that what I miss was [socketing](https://github.com/foostan/crk
     <Image
       src={import('./images/pro-micro-pins.jpg')}
       alt="Soldered pins for pro-micro"
-
-
-      width={800}
+      height="800"
+      width="1200"
     />
     <Image
       src={import('./images/sea-micro.jpg')}
       alt="the controller used for this keyboard is the Sea-Micro controller"
-
-
-      width={800}
+      height="800"
+      width="1200"
     />
   </div>
 </div>
@@ -202,16 +195,14 @@ I learn later on that what I miss was [socketing](https://github.com/foostan/crk
     <Image
       src={import('./images/soldered-pro-micro.jpg')}
       alt="soldered pro micro"
-
-
-      width={800}
+      height="800"
+      width="1200"
     />
     <Image
       src={import('./images/oled-module-installed.jpg')}
       alt="OLED module installed"
-
-
-      width={800}
+      height="800"
+      width="1200"
     />
   </div>
 </div>
@@ -231,23 +222,20 @@ The next step is to check if all the keys work with the key tester in Via. I tes
     <Image
       src={import('./images/per-key-led.jpg')}
       alt="Per-key LEDs of the Corne Keyboard"
-
-
-      width={800}
+      height={800}
+      width={1200}
     />
     <Image
       src={import('./images/underglow-led.jpg')}
       alt="Underglow LEDs of the Corne Keyboard"
-
-
-      width={800}
+      height={800}
+      width={1200}
     />
     <Image
       src={import('./images/rgb.jpg')}
       alt="RGB LEDs of the Corne Keyboard"
-
-
-      width={800}
+      width={1200}
+      height={800}
     />
   </div>
 </div>
@@ -263,8 +251,7 @@ I put the switches and keycaps from my previous keyboards in. And I have to say 
   <Image
     src={import('./images/corne-keyboard-mt3-biip-extended.jpg')}
     alt="the Corne Keyboard with MT3 biip Extended 2048 keycaps"
-
-
+    height={1200}
     width={800}
   />
   <figcaption class="px-4 mt-0">with MT3 Extended 2048 keycaps</figcaption>
@@ -274,8 +261,7 @@ I put the switches and keycaps from my previous keyboards in. And I have to say 
   <Image
     src={import('./images/front-shot.jpg')}
     alt="the Corne Keyboard with GMK White on Black Katakana Keycaps"
-
-
+    height={1200}
     width={800}
   />
   <figcaption class="px-4 mt-0">with GMK WoB Katakana keycaps</figcaption>
@@ -294,8 +280,8 @@ Layer 0: Traditional QWERTY layout.
 <Image
   src={import('./images/layer0.png')}
   alt="Layer 0 of my Corne Keyboard."
-
-  width={800}
+  width="1728"
+  height="620"
 />
 
 Layer 1 (lower): quick access to coding symbol without using `shift` key, arrows, and RBG controls.
@@ -303,8 +289,8 @@ Layer 1 (lower): quick access to coding symbol without using `shift` key, arrows
 <Image
   src={import('./images/layer-lower.png')}
   alt="Layer 2 of my Corne Keyboard."
-
-  width={800}
+  width="1728"
+  height="620"
 />
 
 Layer 2 (raised): Numpads, media controls, and keys to adjust my laptop's screen brightness.
@@ -312,8 +298,8 @@ Layer 2 (raised): Numpads, media controls, and keys to adjust my laptop's screen
 <Image
   src={import('./images/layer-raise.png')}
   alt="Layer 1 of my Corne Keyboard."
-
-  width={800}
+  width="1728"
+  height="620"
 />
 
 Typing in Thai is still tricky because some characters are still missing.
@@ -349,15 +335,13 @@ Once I get comfortable with it, I think a split keyboard is more fun to use.
     <Image
       src={import('./images/corne-left.jpg')}
       alt="Left part of the Corne Keyboard"
-
-
+      height={1200}
       width={800}
     />
     <Image
       src={import('./images/corne-right.jpg')}
       alt="Right part of the Corne Keyboard"
-
-
+      height={1200}
       width={800}
     />
   </div>
@@ -402,15 +386,13 @@ And this is a game over. ☀️ 🫠
     <Image
       src={import('./images/case-v1-closeup.jpg')}
       alt="first printed case - tented version. Designed by VOID."
-
-
+      height={1200}
       width={800}
     />
     <Image
       src={import('./images/case-v1-under-sunlight.jpg')}
       alt="Putting the 3D printed case under the direct sunlight"
-
-
+      height={1200}
       width={800}
     />
   </div>
@@ -431,8 +413,7 @@ And the result is very good. The quality is much, much better than another shop.
       <Image
         src={import('./images/case-v2.jpg')}
         alt="the new 3D printed case from another shop"
-
-
+        height={1200}
         width={800}
       />
     <figcaption class="px-4 mt-0">The 2nd 3D-printed case and plate</figcaption>
@@ -440,8 +421,7 @@ And the result is very good. The quality is much, much better than another shop.
     <Image
       src={import('./images/plate-v2.jpg')}
       alt="Plate printed with the new case. Switches can go in easily."
-
-
+      height={1200}
       width={800}
     />
   </div>
@@ -457,6 +437,7 @@ And the result is very good. The quality is much, much better than another shop.
     src={import('./images/weird-graphic-oled-screen.jpg')}
     alt="Weird graphics shown the OLED screen. Something is not right."
     width={400}
+    height={400}
   />
 - Getting each part separately rather than buying a set seems to be a cheaper option. From [Rafael's shopping list](https://github.com/rafaeldelboni/buildlogs/blob/main/crkbd-v3.md#part-list-original) it seems everything can be purchased from AliExpress.
 - I didn't socket the controller and the OLED modules as mentioned earlier.
@@ -468,16 +449,14 @@ And the result is very good. The quality is much, much better than another shop.
     <Image
       src={import('./images/stacked-modules.jpg')}
       alt="Stacked modules: PCB / controller / OLED"
-
-
       width={800}
+      height={800}
     />
     <Image
       src={import('./images/oled-display-module.jpg')}
       alt="The OLED display module"
-
-
       width={800}
+      height={800}
     />
   </div>
 </div>
@@ -486,16 +465,14 @@ And the result is very good. The quality is much, much better than another shop.
     <Image
       src={import('./images/pcb-back.jpg')}
       alt="The back of the Corne PCB"
-
-
       width={800}
+      height={800}
     />
     <Image
       src={import('./images/back-case.jpg')}
       alt="The back side of the 3D printed case"
-
-
       width={800}
+      height={800}
     />
   </div>
 </div>
@@ -511,14 +488,13 @@ Happy Building
 <Image
   src={import('./images/top-shot.jpg')}
   alt="the Corne split keyboard, from the top"
-
-  width={800}
+  height="800"
+  width="1200"
 />
 
 <Image
   src={import('./images/over.jpg')}
   alt="the Corne split keyboard"
-
-
-  width={800}
+  height="800"
+  width="1200"
 />
