--- a/src/content/blog/web-typography-book/index.mdx
+++ b/src/content/blog/web-typography-book/index.mdx
@@ -69,6 +69,8 @@ import Picture from '../../../components/Picture.astro';
 (แต่ก็ไม่ได้เป็นกฎที่ตายตัวนะครับ เป็นเพียงแนวทางเท่านั้น)
 
 <Picture
+  width="1160"
+  height="474"
   src="/images/web-typography-book/triangle-paragraph.jpg"
   alt="triangle paragraph อธิบายความสัมพันธ์ระหว่าง font-size, line-height, กับ line-length"
   caption="(ภาพจาก https://betterwebtype.com/triangle/ ในเว็บมีเกมให้เล่นด้วย สนุกดี)"
