display posts by year in the blog listing page

--- a/src/pages/uses/index.mdx
+++ b/src/pages/uses/index.mdx
@@ -1,6 +1,6 @@
 ---
 language: "en"
-title: "Tools I use - armno.in.th"
+title: "Tools I use"
 description: "A collection of hardware/software/tools I use on a daily basis."
 thumbnail: /images/uses/laptop.jpg
 pubDate: 2022-06-08T07:51:22+07:00
