more and more content

--- a/src/content/blog/building-mechanical-keyboard/index.mdx
+++ b/src/content/blog/building-mechanical-keyboard/index.mdx
@@ -16,11 +16,8 @@ categories:
 import Picture from "../../../components/Picture.astro";
 import WarningMessage from "../../../components/WarningMessage.astro";
 
-<WarningMessage>
-  Read the English version of this post on Medium:
-  <a href="https://medium.com/@armno/building-my-own-mechanical-keyboard-6903b887b93d">
-    Building My Own Mechanical Keyboard
-  </a>
+<WarningMessage title="English version:">
+  Read the English version of this post on Medium: [Building My Own Mechanical Keyboard](https://medium.com/@armno/building-my-own-mechanical-keyboard-6903b887b93d).
 </WarningMessage>
 
 <WarningMessage>
