fix outdated content

--- a/src/content/blog/angular-http-params-immutability/index.mdx
+++ b/src/content/blog/angular-http-params-immutability/index.mdx
@@ -116,9 +116,10 @@ which leads to the official document about immutability of `HttpRequest` and `Ht
 Then it is kind of make sense too if the `HttpParams` class should be also immutable.
 It just feels a bit strange though when a `.set()` method doesn't actually _set_ something to the caller object.
 
-However, we still cannot always assume that everything is immutable,
+~~However, we still cannot always assume that everything is immutable,
 as mentioned in another API document page:
-[Instances of HttpRequest class should not be assumed to be immutable](https://angular.io/api/common/http/HttpRequest).
+[Instances of HttpRequest class should not be assumed to be immutable](https://angular.io/api/common/http/HttpRequest).~~
+**Updated**: This is no longer true. Now [in the docs](https://angular.io/api/common/http/HttpRequest#description) they stated instances of HttpParams _should be assumed to be_ immutable.
 
 Hmm.. 🤔
 
