update content for the uses page

--- a/src/pages/uses/index.mdx
+++ b/src/pages/uses/index.mdx
@@ -8,90 +8,113 @@ thumbnail: /images/uses/content/thumbnail.jpg
 ---
 # Tools I use
 
-Inspired by [uses.tech](https://uses.tech) where developers share their hardware/software/tools they use regularly. Here are my tools, updated for 2023.
+Inspired by [uses.tech](https://uses.tech) where developers share their hardware/software/tools they use regularly. Here are my tools.
 
 ## Software
 
 ### Programming
 
-* Terminal: [iTerm2](https://www.iterm2.com/version3.html) with
+* Terminal: I use [iTerm2](https://www.iterm2.com/version3.html) with
 
-  * [zsh](https://www.zsh.org/) and [oh-my-zsh](https://ohmyz.sh/) with my slightly modified version of the [cloud](https://github.com/armno/dotfiles/blob/master/cloud-armno.zsh-theme) theme
+  * [zsh](https://www.zsh.org/) and with [Starship](https://starship.rs/) prompt
 
-  * [base16-shell](https://github.com/chriskempson/base16-shell) and [base16-iterm2](https://github.com/martinlindhe/base16-iterm2)
+  * [base16-shell](https://github.com/chriskempson/base16-shell) for terminal colors
 
-  * [zoxide](https://github.com/ajeetdsouza/zoxide) - the replacement for `cd` command.
+  * [zoxide](https://github.com/ajeetdsouza/zoxide) as a replacement for `cd` command
 
-  * [dotfiles ](https://github.com/armno/dotfiles)
+  * [eza](https://github.com/eza-community/eza) as a replacement for `ls` command
 
-* [Vim](https://www.vim.org/) for a quick editing from the terminal. Here is my [`.vimrc`](https://github.com/armno/dotfiles/blob/master/.vimrc).
+  * [bat](https://github.com/sharkdp/bat) as a replacement for `cat` command
 
-* Git: I use command line Git with [delta](https://github.com/dandavison/delta) to render better diffs and logs
+  * and here are my [dotfiles](https://github.com/armno/dotfiles) repo.
+
+![terminal screenshot](../../pages/uses/content/terminal.jpg)
+
+* Main editor: [VSCode](https://code.visualstudio.com/) (with Vim emulation)
+
+  * [Monokai Pro](https://monokai.pro/) (filter Octagon) as a default dark theme, [GitHub Light Theme](https://github.com/yunlingz/vscode-theme-github-light) when I switch to light mode.
+
+  * Here is a full post on how I set up my VSCode: [My VSCode setup for 2023](https://armno.in.th/blog/vscode-setup-2023/).
+
+* [Vim](https://www.vim.org/) for a quick file editing from the terminal.&#x20;
+
+  * I use [vim-plug](https://github.com/junegunn/vim-plug) as a plugin manager for Vim. Here is my [`.vimrc`](https://github.com/armno/dotfiles/blob/master/.vimrc) file.&#x20;
+
+* Git: I use command line Git with [delta](https://github.com/dandavison/delta) to render diffs and logs
 
 * [JetBrains Mono fonts](https://www.jetbrains.com/lp/mono/) in both code editors and terminal.
 
-* Terminal colors: I have both dark and light themes set up and use depending on the light conditions. I create `dark` and `light` aliases to switch between base16 themes.
-
-  * dark: `base16_material-darker`
-
-  * light: `base16_google-light`
-
-* [VSCode](https://code.visualstudio.com/) and themes
-
-  * dark: [`Monokai Pro`](https://monokai.pro/)
-
-  * light: [`GitHub Light Default`](https://marketplace.visualstudio.com/items?itemName=GitHub.github-vscode-theme)
+![](../../pages/uses/content/vscode.jpg)
 
 ### Others
 
 * [Homebrew](https://brew.sh/) package manager
 
-* [Google Chrome Canary](https://www.google.com/chrome/canary) as the development browser
+* [Arc](https://arc.net/) as a default browser, and [Chrome Canary](https://www.google.com/chrome/canary/) as a browser for development.
 
-* [Raycast](https://www.raycast.com/) for shortcuts, windows management
+* [Raycast](https://www.raycast.com/) for shortcuts, windows management, etc.&#x20;
 
-* [BetterTouchTool](https://folivora.ai/) for shortcuts, keyboard remappings
+* [BetterTouchTool](https://folivora.ai/) for shortcuts, automation
 
-* [Pixelmator Pro](https://www.pixelmator.com/pro/) for image editing
+* [Pixelmator Pro](https://www.pixelmator.com/pro/) for image/photo editing
 
-* [Skitch](https://evernote.com/products/skitch) for quick image editing
+* [Cleanshot X](https://cleanshot.com/) to capture and annotate screenshots, screen recordings etc.
 
-* Google Photos to backup all of my photos
+* [1Password](https://1password.com/) for password management
+
+* [Google Photos](https://www.google.com/photos/about/) to backup all of my photos
+
+![](../../pages/uses/content/dock.jpg)
+
+### Alumni
+
+Things I used in the past that are worth mentioning.
+
+* [oh-my-zsh](https://ohmyz.sh/) and [oh-my-posh](https://ohmyposh.dev/) zsh frameworks.
+
+* [z](https://github.com/rupa/z) - since I know how to `z`, I never use `cd` again.
+
+* [kitty](https://sw.kovidgoyal.net/kitty/) is a GPU-accelerated terminal app and it's much faster than iTerm. The only thing that stops me from using it is that it doesn't render as beautiful text as in iTerm, probably because of the lack of supporting [sub-pixel antialiasing](https://github.com/kovidgoyal/kitty/issues/214).
+
+* [Cursor](https://cursor.sh/) is basically VSCode with AI features which I really liked. But paying 20$ a month for a code editor is still a no for me.
+
+* [Alfred](https://www.alfredapp.com/) - I used Alfred for many years until I found Raycast. Thanks Alfred!
+
+* [Kap](https://getkap.co/) is a screen recording app. Very minimal and easy to use.
 
 ---
 
 ## Hardware
 
-Computers: I use
+* Computers: [13-inch Macbook Air M2](https://support.apple.com/en-us/111867) at work. At home I have a [2013 13-inch MakBook Pro](https://support.apple.com/kb/sp691?locale=th_TH), but it's rarely used nowadays.\
+  ![](../../pages/uses/content/macbook-air-m2.jpg)
 
-* [**2015, 15-inch MacBook Pro**](https://support.apple.com/kb/SP719?locale=en_US) (2.2GHz Core i7, 16GB RAM) at work
+* Monitor: a [Samsung 28" UR55 UHD 4K Monitor](https://www.samsung.com/th/business/monitors/ur55/lu28r550uqexxt/) mounted with an [NB-F80 Monitor arm](https://www.google.com/search?q=nb-f80+monitor+arm).\
+  ![](../../pages/uses/content/monitor.jpg)
 
-* [**2013, 13-inch MacBook Pro**](https://support.apple.com/kb/sp691?locale=th_TH) (2.4GHz Core i5, 8GB RAM) at home
+* Keyboard: Corne wireless split keyboard. I wrote about it here: [Building a Wireless Corne Keyboard](https://armno.in.th/blog/building-a-wireless-corne-keyboard/).\
+  ![](../../pages/uses/content/corne-keyboard.jpg)
 
-Monitor: a [Samsung 28" UR55 UHD 4K Monitor](https://www.samsung.com/th/business/monitors/ur55/lu28r550uqexxt/) mounted with an [NB-F80 Monitor arm](https://www.google.com/search?q=nb-f80+monitor+arm).
+* Mouse: [Logitech MX Anywhere 3S](https://www.logitech.com/en-us/products/mice/mx-anywhere-3s.910-006926.html?sp=1\&searchclick=logi)
 
-Keyboards: [Ginkgo65](https://ginkgo65.com/) 65% mechanical keyboard at work and a [custom Tofu 60% mechanical keyboard](https://armno.in.th/2019/05/01/custom-mechanical-keyboard-build-2/) at home.
+* Headphones: I have ~~a few~~ too many of them for my various use cases
 
-Mouse: [Logitech M331 Silent](https://duckduckgo.com/?q=logitech+m331+silent\&t=ffab\&ia=web)
+  * [Sony WH-1000XM4](https://www.sony.co.th/en/electronics/headband-headphones/wh-1000xm4) for office work
 
-Headphones: I have ~~a few~~ too many of them for my various use cases
+  * [Audio-Technica M50x](https://armno.in.th/2015/08/04/audio-technica-ath-m50x/) with [Audirect Beam 2se DAC/Amp](https://www.google.com/search?q=Audirect+Beam+2se+DAC) for music listening
 
-* [Sony WH-1000XM4](https://www.sony.co.th/en/electronics/headband-headphones/wh-1000xm4) for office work
+  * [JBL Quantum 100](https://th.jbl.com/gaming/QUANTUM100.html) for calls and remote meetings. This one has a really good mic!
 
-* [Audio-Technica M50x](https://armno.in.th/2015/08/04/audio-technica-ath-m50x/) with [Audirect Beam 2se DAC/Amp](https://www.google.com/search?q=Audirect+Beam+2se+DAC) for music listening
-
-* [JBL Quantum 100](https://th.jbl.com/gaming/QUANTUM100.html) for calls and remote meetings. (This one has a really good mic!)
-
-* [Soundpeats Air3](https://us.soundpeats.com/products/air3) for commuting and workouts
-
-Note taking: Any normal notebook and a black pen.
-
-!\[muji pens]\(/images/uses/pens.jpg)
+  * [Soundpeats Air3](https://us.soundpeats.com/products/air3) for commuting and workouts\
+    ![](../../pages/uses/content/sony-xm4.jpg)\
+    ![](../../pages/uses/content/headphones.jpg)
 
 ### Other
 
 Not something I use everyday, but still worth mentioning.
 
-* Digital camera: Fujifilm XE-1 digital camera with TTArtisan 50mm f/1.2 manual focus lense
+* Digital camera: Fujifilm XT-20 digital camera with TTArtisan 50mm f/1.2 manual focus lense\
+  ![](../../pages/uses/content/fuji.jpg)
 
-* Bike: [2022 Nich Faith 2](https://www.nichcycling.com/pages/faith2) road bike which I use for commuting to work and sometimes for recreational cycling.
+* Bike: [2022 Nich Faith 2](https://www.nichcycling.com/pages/faith2) road bike which I use for commuting to work and sometimes for a weekend long ride.\
+  ![](../../pages/uses/content/nich-f2.jpg)
