finish the uses page content

--- a/src/pages/uses/index.mdx
+++ b/src/pages/uses/index.mdx
@@ -26,6 +26,8 @@ Inspired by [uses.tech](https://uses.tech) where developers share their hardware
 
   * [bat](https://github.com/sharkdp/bat) as a replacement for `cat` command
 
+  * [fnm](https://github.com/Schniz/fnm) for node version management
+
   * and here are my [dotfiles](https://github.com/armno/dotfiles) repo.
 
 ![terminal screenshot](../../pages/uses/content/terminal.jpg)
@@ -50,9 +52,9 @@ Inspired by [uses.tech](https://uses.tech) where developers share their hardware
 
 * [Homebrew](https://brew.sh/) package manager
 
-* [Arc](https://arc.net/) as a default browser, and [Chrome Canary](https://www.google.com/chrome/canary/) as a browser for development.
+* [Arc](https://arc.net/) as the default browser, and [Chrome Canary](https://www.google.com/chrome/canary/) as the browser for development.
 
-* [Raycast](https://www.raycast.com/) for shortcuts, windows management, etc.&#x20;
+* [Raycast](https://www.raycast.com/) as a Spotlight replacement, and shortcuts, windows management, etc.&#x20;
 
 * [BetterTouchTool](https://folivora.ai/) for shortcuts, automation
 
@@ -99,11 +101,11 @@ Things I used in the past that are worth mentioning.
 
 * Headphones: I have ~~a few~~ too many of them for my various use cases
 
-  * [Sony WH-1000XM4](https://www.sony.co.th/en/electronics/headband-headphones/wh-1000xm4) for office work
+  * [Sony WH-1000XM4](https://www.sony.co.th/en/electronics/headband-headphones/wh-1000xm4) for working in a noisy environment
 
   * [Audio-Technica M50x](https://armno.in.th/2015/08/04/audio-technica-ath-m50x/) with [Audirect Beam 2se DAC/Amp](https://www.google.com/search?q=Audirect+Beam+2se+DAC) for music listening
 
-  * [JBL Quantum 100](https://th.jbl.com/gaming/QUANTUM100.html) for calls and remote meetings. This one has a really good mic!
+  * [JBL Quantum 100](https://th.jbl.com/gaming/QUANTUM100.html) for video calls and meetings. This one has a really good mic!
 
   * [Soundpeats Air3](https://us.soundpeats.com/products/air3) for commuting and workouts\
     ![](../../pages/uses/content/sony-xm4.jpg)\
