prepare styles for dark mode

--- a/src/content/blog/canyon-endurace-cf-sl-2018-review/index.mdx
+++ b/src/content/blog/canyon-endurace-cf-sl-2018-review/index.mdx
@@ -262,9 +262,7 @@ Token Ventous Disc เป็นล้อคาร์บอนขอบสูง 
 ่่่่แต่ก็ยังมีความรู้สึกอยากลองเบาะทรงอื่น เผื่อจะเข้ากับก้นได้ดีกว่า
 
 เลยซื้อเบาะ Bontrager Aeolus Elite มาลอง ส่วนหนึ่งก็เป็นเพราะกระแสแรง
-อีกส่วนคือได้น้ำหนักเบากว่า (ราง Austenite) ในราคาที่ถูกกว่าเมื่อเทียบกับหลายๆ ยี่ห้อในระดับเดียวกัน ที
-
-่ผมได้ลองใช้เป็นขนาด 145mm
+อีกส่วนคือได้น้ำหนักเบากว่า (ราง Austenite) ในราคาที่ถูกกว่าเมื่อเทียบกับหลายๆ ยี่ห้อในระดับเดียวกัน ที่ผมได้ลองใช้เป็นขนาด 145mm
 
 <Picture
   src="/images/canyon-endurace-cf-sl-2018-review/bontrager-aeolus-elite-saddle.jpg"
