--- a/src/content/blog/change-logon-screen-windows-tweaks-com-logon-changer/index.mdx
+++ b/src/content/blog/change-logon-screen-windows-tweaks-com-logon-changer/index.mdx
@@ -14,33 +14,18 @@ url: /2010/05/07/change-logon-screen-windows-tweaks-com-logon-changer/
 
 เบื่อ Logon Screen แบบเดิมๆของ Window 7 กันไหมครับ?
 
+![tweakslogonss2](https://armno.in.th/wp-content/uploads/2010/05/tweakslogonss21_thumb.jpg)
 
+(image from [http://tweaks.com/](http://tweaks.com/))
 
-[![tweakslogonss2[1]](https://armno.in.th/wp-content/uploads/2010/05/tweakslogonss21_thumb.jpg)](https://armno.in.th/wp-content/uploads/2010/05/tweakslogonss21.jpg)
-_(image from _[_http://tweaks.com/_](http://tweaks.com/)_)_
-
-
-
-ลองเปลี่ยนดูมั้ย :) ด้วยโปรแกรม [Tweaks.com Logon Changer for Windows 7](http://tweaks.com/software/tweakslogon/) ทำให้คุณสามารถเปลี่ยน Logon Screen ได้ในพริบตา (ว่าไปนั่น!) แต่มันง่ายจริงๆครับ แค่เปิดโปรแกรมขึ้นมา กดปุ่ม Change Logon Screen จากนั้นก็เลือกภาพ กด OK เสร็จละ! อะไรจะง่ายขนาดนั้น _(แบบ manual ต้องเข้าไปแก้ registry อะไรไม่รู้ตั้งเยอะแยะ)_ ยังไม่พอ ยังสามารถคืนค่ากลับเป็นหน้าจอ default ได้ด้วยนะ
-
-
+ลองเปลี่ยนดูมั้ย :) ด้วยโปรแกรม [Tweaks.com Logon Changer for Windows 7](http://tweaks.com/software/tweakslogon/) ทำให้คุณสามารถเปลี่ยน Logon Screen ได้ในพริบตา (ว่าไปนั่น!) แต่มันง่ายจริงๆครับ แค่เปิดโปรแกรมขึ้นมา กดปุ่ม Change Logon Screen จากนั้นก็เลือกภาพ กด OK เสร็จละ! อะไรจะง่ายขนาดนั้น (แบบ manual ต้องเข้าไปแก้ registry อะไรไม่รู้ตั้งเยอะแยะ) ยังไม่พอ ยังสามารถคืนค่ากลับเป็นหน้าจอ default ได้ด้วยนะ
 
 สนใจล่ะสิ? เชิญไปโหลด (ฟรี) ได้ที่
 
-
-
->
->
-> [**http://tweaks.com/software/tweakslogon/**](http://tweaks.com/software/tweakslogon/)
-
-
+[**http://tweaks.com/software/tweakslogon/**](http://tweaks.com/software/tweakslogon/)
 
 ขนาดโปรแกรม ไม่ถึง 1MB ที่สำคัญ ฟรีด้วยนะเออ .. นี่แหละ โปรแกรมสามัญประจำเครื่อง!
 
-
-
-[![image](https://armno.in.th/wp-content/uploads/2010/05/image_thumb.png)](https://armno.in.th/wp-content/uploads/2010/05/image.png)
-
-
+![image](https://armno.in.th/wp-content/uploads/2010/05/image_thumb.png)
 
 รูปหน้าจอ Logon ปัจจุบันของเครื่องผม ซึ่งก็คือ [Twitter](http://twitter.com/armno) Background ของผมเอง .. ดูในรูปสัดส่วนภาพอาจจะดูแปลกๆ แต่พอกด Test ดูก็ยืดออกเป็นปกติครับ :)
