tweak home page and uses page

--- a/src/pages/uses/index.mdx
+++ b/src/pages/uses/index.mdx
@@ -54,9 +54,11 @@ Inspired by [uses.tech](https://uses.tech) where developers share their hardware
 
 * [Arc](https://arc.net/) as the default browser, and [Chrome Canary](https://www.google.com/chrome/canary/) as the browser for development.
 
-* [Raycast](https://www.raycast.com/) as a Spotlight replacement, and shortcuts, windows management, etc.&#x20;
+* [Raycast](https://www.raycast.com/) as a Spotlight replacement, calculators, shortcuts, etc.
 
-* [BetterTouchTool](https://folivora.ai/) for shortcuts, automation
+* [Karabiner Elements](https://karabiner-elements.pqrs.org/) for keyboard shortcut customizations.
+
+* [Rectangle](https://rectangleapp.com/) for windows management.
 
 * [Pixelmator Pro](https://www.pixelmator.com/pro/) for image/photo editing
 
@@ -84,6 +86,8 @@ Things I used in the past that are worth mentioning.
 
 * [Kap](https://getkap.co/) is a screen recording app. Very minimal and easy to use.
 
+* [BetterTouchTool](https://folivora.ai/) for shortcuts, automation
+
 ---
 
 ## Hardware
@@ -94,8 +98,8 @@ Things I used in the past that are worth mentioning.
 * Monitor: a [Samsung 28" UR55 UHD 4K Monitor](https://www.samsung.com/th/business/monitors/ur55/lu28r550uqexxt/) mounted with an [NB-F80 Monitor arm](https://www.google.com/search?q=nb-f80+monitor+arm).\
   ![](../../pages/uses/content/monitor.jpg)
 
-* Keyboard: Corne wireless split keyboard. I wrote about it here: [Building a Wireless Corne Keyboard](https://armno.in.th/blog/building-a-wireless-corne-keyboard/).\
-  ![](../../pages/uses/content/corne-keyboard.jpg)
+* Keyboard: Corne wireless split keyboard. I wrote about it here: [Building a Wireless Corne Keyboard](https://armno.in.th/blog/building-a-wireless-corne-keyboard/) and [Low Profile Wireless Corne Keyboard](https://armno.in.th/blog/low-profile-wireless-corne-keyboard/).\
+  ![](../../pages/uses/content/corne-low-profile-mbk-keycaps.jpg)
 
 * Mouse: [Logitech MX Anywhere 3S](https://www.logitech.com/en-us/products/mice/mx-anywhere-3s.910-006926.html?sp=1\&searchclick=logi)
 
