create tags listing page and TagsList component for postlayout

--- a/src/content/blog/nikon-af-s-35mm-f18g/index.mdx
+++ b/src/content/blog/nikon-af-s-35mm-f18g/index.mdx
@@ -9,7 +9,7 @@ slug: nikon-af-s-35mm-f18g
 tags:
 - D-SLR
 - Nikon
-- Nikon AF-S 35mm f/1.8G
+- Nikon AF-S 35mm f1.8G
 - รีวิว
 - เลนส์
 title: ความรู้สึกจากการใช้เลนส์ Nikon AF-S 35mm f/1.8G
