add icon to external links in post content

--- a/src/content/blog/web-typography-book/index.mdx
+++ b/src/content/blog/web-typography-book/index.mdx
@@ -18,7 +18,7 @@ categories:
 import Picture from '../../../components/Picture.astro';
 
 <p class="lead">
-หนังสือ <a href="https://betterwebtype.com/web-typography-book/"><strong>Better Web Typography for a Better Web</strong></a> เขียนโดย <a href="https://matejlatin.co.uk/">Matej Latin</a>
+หนังสือ <a href="https://betterwebtype.com/web-typography-book/"><strong>Better Web Typography for a Better Web</strong></a> เขียนโดย <a href="https://matejlatin.com/" target='_blank'>Matej Latin</a>
 เป็นหนังสืออีกเล่มที่อยู่บนชั้นหนังสือเล็กๆ ที่บริษัท รวมกับ <a href="https://armno.in.th/2018/04/26/%E0%B9%81%E0%B8%99%E0%B8%B0%E0%B8%99%E0%B8%B3%E0%B8%AB%E0%B8%99%E0%B8%B1%E0%B8%87%E0%B8%AA%E0%B8%B7%E0%B8%AD-white-hat-ux/">White Hat UX ที่เคยเขียนไป</a> ผมยืมมาอ่านแล้วรู้สึกชอบจึงอยากจะแนะนำครับ
 </p>
 
@@ -48,7 +48,7 @@ import Picture from '../../../components/Picture.astro';
 - องค์ประกอบของแบบอักษร ความแตกต่างระหว่าง typeface กับ font
 - แนวทาง วิธีการเลือกแบบอักษรสำหรับใช้งานในเว็บไซต์
 
-ผมชอบที่ผู้เขียนบอกว่าไม่ควรเลือกแบบอักษร_จากความสวยงามเพียงอย่างเดียว_
+ผมชอบที่ผู้เขียนบอกว่าไม่ควรเลือกแบบอักษรจากความสวยงาม*เพียงอย่างเดียว*
 แต่ให้ดูจากเนื้อหา (content) ของเว็บไซต์เป็นหลัก
 แล้วเลือกแบบอักษรให้เข้ากับลักษณะเนื้อหา เช่น เลือกแบบอักษรแบบ modern
 สำหรับเว็บไซต์ที่มีเนื้อหาเกี่ยวกับ technology เป็นต้น
